07_nocobase_deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: __NAMESPACE__
  namespace: __NAMESPACE__
spec:
  replicas: 1
  selector:
    matchLabels:
      app: __NAMESPACE__
  template:
    metadata:
      labels:
        app: __NAMESPACE__
    spec:
      containers:
      - name: __NAMESPACE__
        image: nocobase/nocobase:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: storage
          mountPath: /app/nocobase/storage
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: __NAMESPACE__-storage
