08_nocobase_service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: __NAMESPACE__
  namespace: __NAMESPACE__
spec:
  selector:
    app: __NAMESPACE__
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
